--- a/luasrc/view/autoipsetadder/check.htm
+++ b/luasrc/view/autoipsetadder/check.htm
@@ -2,10 +2,10 @@
 <%uci=require"luci.model.uci".cursor()%>
 <%nixio=require"nixio"%>
 
-<input class="cbi-button cbi-button-apply" name="apply_update_button" id="apply_update_button" value="debug" onclick=" return debug_ipset() "/>
+<input class="cbi-button cbi-button-apply" name="apply_update_button" id="apply_update_button" value="debug" onclick=" return apply_debug_ipset() "/>
 		<textarea id="cbid.logview.1.conf" class="cbi-input-textarea" style="width: 100%;display:none" data-update="change" name="vbid.logview.1.conf" rows="5" cols="60" readonly="readonly" > </textarea>
 <script type="text/javascript">//<![CDATA[
-function apply_debug(){
+function apply_debug_ipset(){
 	XHR.get('<%=url([[admin]], [[services]], [[autoipsetadder]], [[dodebug]])%>',null,function(x, data){}
 		);
 	poll_check();
@@ -38,7 +38,7 @@ XHR.poll(3, '<%=url([[admin]], [[services]], [[autoipsetadder]], [[check]])%>', 
 		}
 	}
 );}
-<% if nixio.fs.access("/var/run/update_core")then %>
+<% if nixio.fs.access("/var/run/debugipset")then %>
 poll_check();
 <%else%>
 var	btn = document.getElementById('apply_update_button');
