--- a/luasrc/view/autoipsetadder/check.htm
+++ b/luasrc/view/autoipsetadder/check.htm
@@ -4,10 +4,10 @@
 
 <%if uci:get("autoipsetadder","autoipsetadder","enabled")=="1" then%>
 <textarea id="cbid.logview.1.conf" class="cbi-input-textarea" style="width: 100%;display:inline" data-update="change" name="vbid.logview.1.conf" rows="10" cols="60" readonly="readonly" > </textarea>
-<input type="checkbox" name="NAME" value="reverse" onclick=" return reverselog()" style="vertical-align:middle;height: auto;" checked><%:reverse%></input>
-<input class="cbi-button cbi-button-apply" name="apply_update_button" id="apply_update_button" value="dellog" onclick=" return apply_del_log() "/>
+<input type="checkbox" value="reverse" onclick=" return reverselog()" style="vertical-align:middle;height: auto;" checked><%:reverse%></input>
+<input type="button" class="cbi-button cbi-button-apply" name="apply_update_button" id="apply_update_button" value="dellog" onclick=" return apply_del_log() "/>
 
-<input class="cbi-button cbi-button-apply" name="apply_update_button" id="apply_update_button" value="debug" onclick=" return debug_ip() "/>
+<input type="button" class="cbi-button cbi-button-apply" name="apply_update_button" id="apply_update_button" value="debug" onclick=" return debug_ip() "/>
 
 <textarea id="cbid.logview.2.conf" class="cbi-input-textarea" style="width: 100%;display:none" data-update="change" name="vbid.logview.1.conf" rows="10" cols="60" readonly="readonly" > </textarea>
 
